collabora/middleware-collabora-deny-admin.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: collabora-deny-admin
  namespace: nextcloud
spec:
  ipAllowList:
    sourceRange:
      - 203.0.113.1/32
