collabora/traefic-deny.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: collabora-deny-admin
  namespace: collabora
spec:
  ipAllowList:
    sourceRange:
      - 203.0.113.1/32
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora-blocked
  namespace: collabora
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: collabora-collabora-deny-admin@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: office.andreybondarenko.com
      http:
        paths:
          - path: /browser/dist/admin/
            pathType: Prefix
            backend:
              service:
                name: collabora-collabora-online
                port:
                  number: 9980
          - path: /cool/adminws/
            pathType: Prefix
            backend:
              service:
                name: collabora-collabora-online
                port:
                  number: 9980
          - path: /cool/getMetrics
            pathType: Prefix
            backend:
              service:
                name: collabora-collabora-online
                port:
                  number: 9980
